fixed line spacing in popup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,13 +155,10 @@ h1 {
    position: absolute;
    width: 25%;
    height: 50%;
-   /* border: double #ec6d6dfa; */
    box-shadow: 2px 2px 8px rgb(70, 69, 69);
    text-align: center;
-   /* max-width: 90%;
-   max-height: 90%; */
-   /* overflow: auto; */
    z-index: 2002;
+   line-height: 25px;
 }
  
 .ampopup-close {
@@ -185,7 +182,6 @@ h1 {
    border-radius: 4px;
    font-size: 16px;
    background-color: white;
-   /* background-image: url('searchicon.png'); */
    background-position: 10px 10px;
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
